# ssphub_veille

./: .gitignore  LICENSE  README.md  bot.py  fetch_tchap.py  main.py  pyproject.toml  script.py  test.py  test_all.py  veille.py  veille_function.py
docs/: graphs.sh
src/: complete.py  complete_qmd.py  extract.py  veille_function.py
src/data/: clean_conv.py  complete_veille.py  formatting_link.py  formatting_time.py  to_infolettre.py
src/grist/: access_grist_api.py  add_to_table.py
src/make_data/: clean_conv.py
src/tchap_agent/: __init__.py  fetcher.py
src/tchap_bot/: __init__.py  config.py  main.py  test.py
src/tchap_bot/config/: settings.py
src/tchap_bot/core/: bot.py  room_filter.py
src/tchap_bot/listeners/: __init__.py  echo.py  parser.py
src/tchap_clean/: formatting_link.py  parsing_export.py
src/test/: test_all.py  test_complete_veille.py  test_grist.sh  test_realdata.py
src/utils/: access_grist_api.py  config.py  llm_client.py  logging.py
