[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "code2flow>=2.5.1",
    "openai>=2.43.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "requests>=2.32.5",
]
