[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "code2flow>=2.5.1",
    "openai>=2.43.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
# Put the repo root on sys.path so tests under src/test/ can do absolute
# imports like `import src.data.complete_veille` when run via `uv run pytest`.
pythonpath = ["."]
testpaths = ["src/test"]
# test_all.py is a manual smoke script that writes to the live Grist Test table
# (run it via `python test.py`); keep it out of the automated pytest run.
addopts = "--ignore=src/test/test_all.py"
 
